# BichoLab-2.0

DOCUMENTACION/: README.txt
FRONTEND/: forum.py  forum_components.py  main_app.py  main_app3.py  pyproject.toml  temas.py  topics.py
FRONTEND/__pycache__/: forum.cpython-312.pyc.1999133378352  forum.cpython-312.pyc.3144643253936
FRONTEND/forum_db/: forum_test.json  forum_test.xlsx
